# aZero-SDL-Cpp-Wrapper

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: main.cpp  tests.hpp
include/: SDLCppWrapper.hpp
include/input/: SDLInput.hpp
include/window/: SDLWindowBase.hpp  SDLWindow_Win32.hpp
src/: SDLCppWrapper.cpp
src/input/: DeviceController.hpp  DeviceListener.hpp  DeviceManager.hpp
src/input/devices/: Gamepad.hpp  Keyboard.hpp
